--- a/index.html
+++ b/index.html
@@ -1,150 +1,113 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sedona mobile</title>
+	<title>Sedona</title>
+	<link rel="stylesheet" type="text/css" href="css/stylus.css">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/stylus.css" />
 </head>
 <body>
-	<div class="centerer main-centerer">
-		<h1 class="visually-hidden">Седона</h1>
+	<div class="main-container">
 		<header class="main-header">
-			<div class="main-header__top">
-				<nav class="main-nav">
-					<ul class=" main-nav__list site-list">
-						<li class="site-list__item">
-							<a class="site-list__link" href="#">Главная</a>
-							<button class="site-list__close"></button>
-						</li>
-						<li class="site-list__item">
-							<a class="site-list__link" href="#">Фото и видео</a>
-						</li>
-						<li class="site-list__item">
-							<a class="site-list__link" href="#">Форма отзыва</a>
-						</li>
-						<li class="site-list__item">
-							<a class="site-list__link" href="#">Html Academy</a>
-						</li>
-					</ul>
-				</nav>
-				<img  class="main-header__logo-image" src="images/logotype-mobile.svg" alt="Sedona">
-				<button class="main-nav__toggle" type="button">
-					<img src="images/icon-menu.svg">
-					<span class="visually-hidden">Открыть меню</span>
-				</button>
-			</div>
-			<div class="main-header__bottom">
-				<img class="main-header__welcome-text" src="images/header-text.svg" alt="Welcome to the Sedona">
+			<nav class="main-header__nav">
+				<ul class="main-header__nav-list site-nav">
+					<li class="site-nav__item"><a href="#" class="site-nav__link"><span>Главная</span></a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link"><span>Фото и видео</span></a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link"><span>Форма отзыва</span></a></li>
+					<li class="site-nav__item"><a href="#" class="site-nav__link"><span>HTML ACADEMY</span></a></li>
+				</ul>
+				<img class="main-header__nav-logo" src="images/logotype-mobile.svg" alt="Sedona">
+				<button class="main-header__nav-open"></button>
+			</nav>
+			<div class="main-header__logo logo-wrapper">
+				<img class="logo-wrapper__text-image" src="images/header-text.svg" alt="Welcome to Sedona" width="282" height="214">
 			</div>
 		</header>
 		<main class="main">
-			<h2 class="visually-hidden">Седона - лучшее место в мире</h2>
-			<b class="main__slogan">Седона - небольшой городок в аризоне, заслуживающий большего!</b>
-			<section class="reasons">
-				<h3 class="reasons__title">Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</h3>
-				<ul class="reasons__list-main main-list">
-					<li class="main-list__item reason-1">
-						<div class="main-list__text-wrapper">
-							<h4 class="main-list__title">Настоящий городок</h4>
-							<span class="main-list__number">- №1 -</span>
-							<p class="main-list__text">
-								Седона не аттракцион для туристов, там течет своя жизнь
-							</p>
+			<b class="main-slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+			<section class="main__reasons">
+				<h3 class="main__reasons-title">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон</h3>
+				<ul class="main__reasons-list main-reasons-list">
+					<li class="main-reasons-list__item main-reasons-list__item_city">
+						<div class="main-reasons-list__item-wrapper main-reasons-list__item_city-wrapper">
+							<h4 class="main-reasons-list__headline">Настоящий городок</h4>
+							<span class="main-reasons-list__number">- №1 -</span>
+							<p class="main-reasons-list__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
 						</div>
-						<img src="images/photo-city1x.jpg" alt="Главная улица">
+						<img class="main-reasons-list__item_city-img" src="images/photo-city.jpg">
 					</li>
-					<li class="main-list__item reason-2">
-						<div class="main-list__text-wrapper">
-							<h4 class="main-list__title">Там есть мост дьявола</h4>
-							<span class="main-list__number">- №2 -</span>
-							<p class="main-list__text">
-								Да, по нему можно пройти! Если вы осмелитесь, конечно
-							</p>
-						</div>
-						<img src="images/photo-bridge1x.jpg" alt="Главная улица">
-					</li>
-					<li class="main-list__item reason-3">
-						<div class="main-list__text-wrapper">
-							<h4 class="main-list__title">Небольшая площадь</h4>
-							<span class="main-list__number">- №3 -</span>
-							<p class="main-list__text">
-								Все интересные места находятся очень близко
-							</p>
-						</div>
-					</li>
-					<li class="main-list__item reason-4">
-						<div class="main-list__text-wrapper">
-							<h4 class="main-list__title">Красивая дорога</h4>
-							<span class="main-list__number">- №4 -</span>
-							<p class="main-list__text">
-								Ехать в Седону из Лас-вегаса совсем не скучно!
-							</p>
-						</div>
-					</li>
-					<li class="main-list__item reason-5">
-						<div class="main-list__text-wrapper">
-							<h4 class="main-list__title">Мало туристов</h4>
-							<span class="main-list__number">- №5 -</span>
-							<p class="main-list__text">
-								Большинство едет в Гранд каньон <br> и толпится там
-							</p>
-						</div>
-					</li>
-					<li class="main-list__item aside-list-wrapper">
-						<ul class="reasons__list-aside aside-list">
-							<li class="aside-list__item">
-								<h4 class="aside-list__title">Жилье</h4>
-								<p class="aside-list__text">
-									Рекомендуем пожить в настоящем мотеле, все как в кино!
-								</p>
+					<li class="main-reasons-list__item aside-list-wrapper">
+						<ul class="aside-list-wrapper_list aside-reasons-list">
+							<li class="aside-reasons-list__item f-a-r">
+								<h5 class="aside-reasons-list__headline">Жилье</h5>
+								<p class="aside-reasons-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
 							</li>
-							<li class="aside-list__item">
-								<h4 class="aside-list__title">Сувениры</h4>
-								<p class="aside-list__text">
-									Не только китайского, но и местного производства!
-								</p>
+							<li class="aside-reasons-list__item s-a-r">
+								<h5 class="aside-reasons-list__headline">Сувениры</h5>
+								<p class="aside-reasons-list__text">Не только китайского, но и местного производства!</p>
 							</li>
-							<li class="aside-list__item">
-								<h4 class="aside-list__title">Еда</h4>
-								<p class="aside-list__text">
-									Всегда заказывайте фирменный бургер, вы не разочаруетесь!
-								</p>
+							<li class="aside-reasons-list__item t-a-r">
+								<h5 class="aside-reasons-list__headline">Еда</h5>
+								<p class="aside-reasons-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 							</li>
 						</ul>
+					</li>
+					<li class="main-reasons-list__item main-reasons-list__item_bridge">
+						<div class="main-reasons-list__item-wrapper main-reasons-list__item_bridge-wrapper">
+							<h4 class="main-reasons-list__headline">Там есть мост дьявола</h4>
+							<span class="main-reasons-list__number">- №2 -</span>
+							<p class="main-reasons-list__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+						</div>
+						<img src="images/photo-bridge.jpg" alt="" class="main-reasons-list__item_bridge-img">
+					</li>
+					<li class="main-reasons-list__item">
+						<div class="main-reasons-list__item-wrapper">
+							<h4 class="main-reasons-list__headline">Небольшая площадь</h4>
+							<span class="main-reasons-list__number">- №3 -</span>
+							<p class="main-reasons-list__text">Все интересные места находятся очень близко</p>
+						</div>
+					</li>
+					<li class="main-reasons-list__item">
+						<div class="main-reasons-list__item-wrapper">
+							<h4 class="main-reasons-list__headline">Красивая дорога</h4>
+							<span class="main-reasons-list__number">- №4 -</span>
+							<p class="main-reasons-list__text">Ехатоь в Седону из Лас-Вегаса совсем не скучно!</p>
+						</div>
+					</li>
+					<li class="main-reasons-list__item">
+						<div class="main-reasons-list__item-wrapper">
+							<h4 class="main-reasons-list__headline">Мало туристов</h4>
+							<span class="main-reasons-list__number">- №5 -</span>
+							<p class="main-reasons-list__text">Большинство едет в Гранд каньон и толпится там</p>
+						</div>
 					</li>
 				</ul>
 			</section>
 			<section class="hotel-search">
-				<div class="hotel-search__wrapper centerer">
-					<h2 class="visually-hidden">Поиск гостиницы</h2>
-					<b class="hotel-search__title">Заинтересовались?</b>
-					<p class="hotel-search__text">
-						Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне
-					</p>
-					<a class="hotel-search__link" href="#"><span>Найти гостиницу</span></a>
-				</div>
-				<iframe class="hotel-search__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d834767.6503464434!2d-111.99996484747501!3d35.18625958293373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1591727912145!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+				<h3 class="hotel-search__headline">Заинтересовались?</h3>
+				<p class="hotel-search__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+				<button class="hotel-search__search-button">Найти гостиницу</button>
+				<iframe class="hotel-search__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2368652.053209673!2d-112.50626832788157!3d34.203490607166685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1593967319428!5m2!1sru!2sru"></iframe>
 			</section>
 		</main>
 		<footer class="main-footer">
-			<b class="main-footer__slogan">#visitsedona</b>
-			<ul class="main-footer__list sn-list">
-				<li class="sn-list__item">
-					<a href="#"><img src="images/icon-twitter.svg" alt="Twitter"></a>
+			<b class="main-footer__tag">#VISITSEDONA</b>
+			<ul class="main-footer__group-list footer-group-list">
+				<li class="footer-group-list__item">
+					<img src="images/icon-twitter.svg" alt="Twitter">
 				</li>
-				<li class="sn-list__item">
-					<a href="#"><img src="images/icon-facebook.svg" alt="Facebook"></a>
+				<li class="footer-group-list__item">
+					<img src="images/icon-facebook.svg" alt="Facebook">
 				</li>
-				<li class="sn-list__item">
-					<a href="#"><img src="images/icon-youtube.svg" alt="Youtube"></a>
+				<li class="footer-group-list__item">
+					<img src="images/icon-youtube.svg" alt="Youtube">
 				</li>
 			</ul>
-			<p class="main-footer__add">
-				<span>Разработано</span>
-				<img src="images/htmlacademy.svg" alt="Html Academy">
-			</p>
+			<a class="main-footer__dev" href="#">
+				<span>Разработано</span> 
+				<img src="images/htmlacademy.svg" alt="HTML academy">
+			</a>
 		</footer>
+		<script src="js/scripts.js"></script>
 	</div>
-	<script src="js/scripts.js"></script>
 </body>
 </html>
